@@ -248,7 +248,6 @@
                             <includes>
                                 <include>**/systests/**</include>
                             </includes>
-                            <argLine>-XX:MaxPermSize=512M</argLine>
                         </configuration>
                     </execution>
                     <execution>
